  New command: warp list (list warp portal maps)
- Support for sending numbers to NPCs.
  For example, you can now buy Phracons in the Prontera upgrade shop.
  New command: talk num (#number)
- Background colors in consolecolors.txt are now supported.
- Added optional parameter for chist, "chist 10" will show last 10 lines of chat.txt
- Better support for secure logins.


New commands:
- warp list
  List warp portal maps.
- talk num (#number)
  Respond to an NPC with a number.


New configuration options:
- shop_random
  When set to 1, the item order in the shop will be randomized. The behavior
  in the previous releases was to always randomize shop item order, but now
  it's configurable.
- storageAuto_npc_type and storageAuto_npc_steps
  If storageAuto_npc_type is blank it will use the current steps (and
  display a warning)
  			     1 it will use the current steps (c r1 n)
  			     2 it will use the steps for the comodo npcs (c c r1 n)
  			     3 it will use the steps defined in autoStorage_npc_steps
  storageAuto_npc_steps is a (any number of) space(s) seperated list of
  commands to send while attempting to store.
  These commands consist of n which will send the cancel command
  			    c which will send the continue command
  			    r* which will send a responce where the responce number is *
  			    (NOTE responce numbering starts at 0 (unlike it does if you
  			    are using sendTalkResponse)) after training everyone to start
  			    counting at 0, i thaught it best to preserve it ;)
- secureLogin
  secureLogin_type
  secureLogin_account
  These options are used for secure logins.
- partySkill_#_*
  Used for party skills.
  See config.txt in the latest confpack.


Bug fixes:
- Fixed comma placement in formatNumber sub (its what puts the commas
  in your zenny amount.
- When in X-Kore mode, the RO client will still work if you shutdown
  Kore. However, you can't start Kore in X-Kore mode again until you've
  restarted the RO client.